<resources>
    <string name="app_name">Podcast Manager</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_download">Download</string>
    <string name="action_deleted">Delete</string>

    <string name="label_your_podcasts">Subcriptions</string>
    <string name="label_discover">Browse</string>
    <string name="label_now_playing">Now Playing</string>
    <string name="label_play">Play</string>
    <string name="label_pause">Pause</string>
    <string name="label_next">Next</string>
    <string name="label_search">Search</string>
    <string name="label_previous">Previous</string>

    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_message_confirm_deletion">Are you want to unsubscribe from {0}?</string>
    <string name="dialog_title_confirm_deletion">Unsubscribe</string>

    <string name="notification_text_new_episodes">New episodes available</string>
    <string name="notification_content_text_new_episodes">New {0} episodes added</string>

    <string name="notification_text_download_in_progress">Download in progress</string>

    <string name="notification_text_download_failed">Download Failed</string>

    <string name="notification_text_download_completed">Download complete</string>

    <string name="notification_text_episode_is_already_being_downloaded">Episode is already being downloaded</string>


    <!--Menu Drawer-->
    <string name="action_drawer_subcriptions">Subcriptions</string>
    <string name="action_drawer_top_charts">Top Charts</string>
    <string name="action_drawer_downloads">Downloads</string>
    <string name="action_drawer_favorites">Favorites</string>
    <string name="action_drawer_search">Search</string>
    <string name="action_drawer_play_queue">Play Queue</string>
    <string name="action_drawer_settings">Settings</string>
    <string name="action_drawer_rate_this_app">Rate this App</string>
    <string name="action_drawer_invite_friends">Invite friends</string>

    <string name="settings_download_podcast_wifi">Only Download Podcasts Over Wi-Fi</string>

</resources>
