<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/action_top_charts"
            android:orderInCategory="1"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/action_drawer_top_charts"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_subcriptions"
            android:icon="@drawable/ic_wifi_tethering_black_24dp"
            android:orderInCategory="2"
            android:title="@string/action_drawer_subcriptions"/>

        <item
            android:id="@+id/action_downloads"
            android:orderInCategory="3"
            android:icon="@drawable/ic_download_black_24dp"
            android:title="@string/action_drawer_downloads"/>

        <item
            android:id="@+id/action_play_queue"
            android:orderInCategory="4"
            android:icon="@drawable/ic_playlist_black_24dp"
            android:title="@string/action_drawer_play_queue"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_search"
            android:orderInCategory="6"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/action_drawer_search"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_rate_app"
            android:orderInCategory="7"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/action_drawer_rate_this_app"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_settings"
            android:orderInCategory="9"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_drawer_settings"
            app:showAsAction="never" />
    </group>
</menu>